# Star-Citizen-CVar-Utility

./: .gitignore  CMakeLists.txt  CVarManager.cpp  Injector.cpp  LICENSE.txt  Makefile  README.md  SC_CVar_Utility.sln  SC_CVar_Utility.vcxproj  SC_CVar_Utility.vcxproj.filters  SC_DLL_Test.vcxproj  SC_DLL_Test.vcxproj.filters  compat.h  dllmain.cpp  mingw-toolchain.cmake  pch.h
include/: CVarManager.h
libs/: json.hpp
